--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ java {
             java {
                 srcDirs = ["src"]
             }
+            resources {
+                srcDirs = ["res"]
+            }
         }
     }
 }
