--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -85,7 +85,7 @@ jobs:
           echo "asset_name=$(basename "$WINDOWS_JAR")" >> "$GITHUB_OUTPUT"
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.DEPLOYMENT_TOKEN }}
         with:
