Fixed texture not found when building from gradle

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ java {
 jar {
     manifest {
         attributes(
-                "Main-Class": application.mainClass
+            "Main-Class": application.mainClass
         )
     }
+    archiveBaseName = "Bomberman"
 }
